# nada

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: release-please-config.json
.github/workflows/: on_main.yml  reusable_checks.yml
src/nada/: __init__.py  base.py  option.py  result.py
tests/: test_combined_types.py  test_option_types.py  test_result_types.py
