[project]
name = "nada"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Easton Potokar", email = "contagon6@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "typing-extensions>=4.15.0",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.basedpyright]
pythonVersion = "3.12"

[dependency-groups]
dev = [
    "basedpyright>=1.39.0",
]
# reportIncompatibleVariableOverride = "hint"
